--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
     font-family: Arial;
     text-align: center;
+    vertical-align: middle;
 }
 
 #opponent-choice{
@@ -35,6 +36,7 @@ body{
 #opponent-deck img{
     width: 40px;
     height: 40px;
+    display: none;
 }
 
 #your-deck img{
